syntax = "proto3";

option go_package = "github.com/webitel/chat_manager/api/proto/storage";

package storage;

service FileService {
    rpc UploadFile (stream UploadFileRequest) returns (UploadFileResponse) {}
    rpc UploadFileUrl (UploadFileUrlRequest) returns (UploadFileUrlResponse) {}
    rpc GenerateFileLink (GenerateFileLinkRequest) returns (GenerateFileLinkResponse) {}
}

enum UploadFileChannel {
    UnknownChannel = 0;
    ChatChannel = 1;
    MailChannel = 2;
    CallChannel = 3;
    LogChannel = 4;
    MediaChannel = 5;
    KnowledgebaseChannel = 6;
    CasesChannel = 7;
    ScreenshotChannel = 8;
    ScreenSharingChannel = 9;
}

message Thumbnail {
    string mime_type = 1;
    int64 size = 2;
    string scale = 3;
}

message FileMalwareScan {
    bool found = 1;
    string status = 2;
    string description = 3;
}

enum UploadStatusCode {
    Unknown = 0;
    Ok = 1;
    Failed = 2;
}

message UploadFileUrlRequest {
    int64 domain_id = 1;
    string uuid = 2;
    string name = 3;
    string url = 4;
    string mime = 5;
    UploadFileChannel channel = 6;
    bool generate_thumbnail = 7;
}

message UploadFileUrlResponse {
    int64 id = 1;
    string url = 2;
    string mime = 4;
    int64 size = 5;
    UploadStatusCode code = 6;
    string sha256sum = 7;
    Thumbnail thumbnail = 8;
    string server = 9;
    FileMalwareScan malware = 10;
}

message UploadFileRequest {

    message Metadata {
        int64 domain_id = 1;
        string name = 2;
        string mime_type = 3;
        string uuid = 4;
        bool stream_response = 5;
        int64 profile_id = 6;
        UploadFileChannel channel = 7;
        bool generate_thumbnail = 8;
        int64 uploaded_by = 9;
        int64 created_at = 10;
    }

    oneof data {
        Metadata metadata = 1;
        bytes chunk = 2;
    };

}

message UploadFileResponse {
    int64 file_id = 1;
    string file_url = 2;
    int64 size = 3;
    UploadStatusCode code = 4;
    string server = 5;
    string sha256sum = 6;
    Thumbnail thumbnail = 7;
    FileMalwareScan malware = 8;
}

message GenerateFileLinkRequest {
    int64 domain_id = 1;
    int64 file_id = 2;
    string source = 3;
    string action = 4;
    map<string, string> query = 5;
    bool metadata = 6;
}

message GenerateFileLinkResponse {
    message Metadata {
        int64 id = 1;
        string name = 2;
        string mime_type = 3;
        string uuid = 4;
        int64 size = 5;
    }

    string url = 1; // deprecated
    string base_url = 2;
    Metadata metadata = 3;
}
